deploy: 098356d610e118ae1781af942abe342bed86a191

--- a/quick-thanks/index.html
+++ b/quick-thanks/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Thoughts, ideas and learnings from a developer come manager. Anthony Dillon.">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thoughts from Anthony Dillon</title>
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="shortcut icon" href="/img/favicon.png">
-</head>
-<body>
-  <div class="layout">
-    <header id="navigation" class="p-navigation l-navbar">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quick thanks</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="/img/favicon.png">
+  </head>
+  <body>
+    <div class="layout">
+      <header id="navigation" class="p-navigation l-navbar">
   <div class="p-navigation__toggle">
     <button class="p-navigation__toggle-button" type="button" aria-label="Toggle navigation">
       Menu
@@ -81,51 +79,24 @@
   </script>
 </header>
 
-    <main class="l-main">
-<h1>Some thoughts</h1>
-<p>
-  I am a software developer, with a passion for building things that
-  people love to use. I working as an Director of Engineering at Canonical.
-</p>
-<p>
-  I love to learn and teach others, I'm always looking for
-  new ways to improve myself. I'm a big fan of the leanweb community.
-</p>
-<p>You can find me on <a href="https://github.com/anthonydillon">GitHub</a> and <a href="https://twitter.com/anthonydillon">Twitter</a>. <a href="/feed.xml">RSS <svg height="1.2rem" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true" style="position:relative;top:3px;"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"></path></svg></a></p>
-<hr />
-
-<div class="p-cards">
-
-<a href='/tips-and-tricks/' class="p-card">
-  <h4 class="p-card__title">Tips and tricks</h4>
-</a>
-
-<a href='/surprising-css-selectors-you-can-use-today/' class="p-card">
-  <h4 class="p-card__title">Surprising CSS selectors you can use today</h4>
-</a>
-
-<a href='/refocusing-on-1-1/' class="p-card">
-  <h4 class="p-card__title">Refocusing on 1:1s</h4>
-</a>
-
-<a href='/quick-thanks/' class="p-card">
-  <h4 class="p-card__title">Quick thanks</h4>
-</a>
-
-<a href='/leading-distributed-teams/' class="p-card">
-  <h4 class="p-card__title">Leading distributed teams</h4>
-</a>
-
-<a href='/handling-class-attribute-in-beautifulsoup/' class="p-card">
-  <h4 class="p-card__title">Handling “class” attribute in Beautifulsoup</h4>
-</a>
-
-<a href='/ant-fm/' class="p-card">
-  <h4 class="p-card__title">Ant FM</h4>
-</a>
-
-</div>
-</main>
-  </div>
-</body>
+      <main class="l-main p-article">
+        <nav class="p-breadcrumb aria-label="breadcrumbs">
+          <a class="p-breadcrumb__link" href="/">Home</a>
+          <a class="p-breadcrumb__link" href="" aria-current="page">Quick thanks</a>
+        </nav>
+        <h1>Quick thanks</h1>
+        <article><p>Modern appreciation systems in workplaces normally involve an application for someone including written justification. This reduces the chance of someone being appreciated when it becomes time to submit the form.</p>
+<h2>If the appreciation is rejected?</h2>
+<p>As this system is gated by applications then some will be rejected and would demoralise the person applying could lead to them becoming less likely to continue submit appreciation.</p>
+<p>Even worse, the person could tell the other that they have submitted the form and if it is rejected this would make the person feel unappreciated.</p>
+<h2>How can we tackle this?</h2>
+<p>The application of appreciation is a necessary system within an organisation but there is a benefit of micro appreciation. Now that we are all working remotely. We could add define a tag or a way to mark in a conversation that you appreciate them. For example, maybe replying to a message with <strong>@appreciation++</strong> or simply adding a 👍 (thumbs up emoji) to a message would mark it as a micro appreciation. This would be recorded and high counts would be automatically applied to the rewards system as a way to aggregate appreciation on a monthly basis.</p>
+<p>A monthly report could be designed to summarise your interactions and micro appreciations. This would give the system immediate value to the happiness of the individuals in the company.</p>
+<h2>How can we avoid gamification?</h2>
+<p>I do not like to solve an issue until it appears. So I would suggest we trust people to be honest. If it becomes clear there is a problem here then try and solve it then.</p>
+<p>Produce a monthly email of small appreciation. Making this a in purely a reflective service.</p>
+</article>
+      </main>
+    </div>
+  </body>
 </html>
