--- a/ideas/index.html
+++ b/ideas/index.html
@@ -92,6 +92,10 @@
 <h2>Posts</h2>
 <div class="p-cards">
   
+  <a href='/quick-thanks/' class="p-card">
+    <h4 class="p-card__title">Quick thanks</h4>
+  </a>
+  
   <a href='/ant-fm/' class="p-card">
     <h4 class="p-card__title">Ant FM</h4>
   </a>
