--- a/src/cooking.html
+++ b/src/cooking.html
@@ -14,6 +14,11 @@ layout: "base.html"
 <div class="p-cards">
   {% for post in collections.cooking reversed %}
   <a href='{{ post.url | url }}' class="p-card">
+    {% for tag in post.data.tags %}
+    {% if tag != 'post' %}
+    <span class="p-badge--{{tag}}">{{ tag }}</span>
+    {% endif %}
+    {% endfor %}
     <h4 class="p-card__title">{{ post.data.title }}</h4>
   </a>
   {% endfor %}
