--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@ layout: "base.html"
 <div class="p-cards">
 {% for post in collections.post reversed %}
 <a href='{{ post.url | url }}' class="p-card">
+  {% for tag in post.data.tags %}
+  {% if tag != 'post' %}
+  <span class="p-badge--{{tag}}">{{ tag }}</span>
+  {% endif %}
+  {% endfor %}
   <h4 class="p-card__title">{{ post.data.title }}</h4>
 </a>
 {% endfor %}
