deploy: 6b3ee468d0d50f21a4ecd528c5fdf8eaf7529851

--- a/index.html
+++ b/index.html
@@ -97,30 +97,79 @@
 <div class="p-cards">
 
 <a href='/tips-and-tricks/' class="p-card">
+  
+  
+  <span class="p-badge--engineering">engineering</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Tips and tricks</h4>
 </a>
 
 <a href='/surprising-css-selectors-you-can-use-today/' class="p-card">
+  
+  
+  <span class="p-badge--engineering">engineering</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Surprising CSS selectors you can use today</h4>
 </a>
 
 <a href='/refocusing-on-1-1/' class="p-card">
+  
+  
+  <span class="p-badge--management">management</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Refocusing on 1:1s</h4>
 </a>
 
 <a href='/quick-thanks/' class="p-card">
+  
+  
+  <span class="p-badge--ideas">ideas</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Quick thanks</h4>
 </a>
 
 <a href='/leading-distributed-teams/' class="p-card">
+  
+  
+  <span class="p-badge--management">management</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Leading distributed teams</h4>
 </a>
 
 <a href='/handling-class-attribute-in-beautifulsoup/' class="p-card">
+  
+  
+  <span class="p-badge--engineering">engineering</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Handling “class” attribute in Beautifulsoup</h4>
 </a>
 
 <a href='/ant-fm/' class="p-card">
+  
+  
+  <span class="p-badge--ideas">ideas</span>
+  
+  
+  
+  
   <h4 class="p-card__title">Ant FM</h4>
 </a>
 
