--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
 
 <div class="p-cards">
 
+<a href='/writing-specification-documents/' class="p-card">
+  
+  
+  <span class="p-badge--management">management</span>
+  
+  
+  
+  
+  <h4 class="p-card__title">Writing specification documents</h4>
+</a>
+
 <a href='/tips-and-tricks/' class="p-card">
   
   
@@ -138,6 +149,17 @@
   
   
   <h4 class="p-card__title">Quick thanks</h4>
+</a>
+
+<a href='/principle-of-estimating-tasks/' class="p-card">
+  
+  
+  <span class="p-badge--management">management</span>
+  
+  
+  
+  
+  <h4 class="p-card__title">Principle of estimating tasks</h4>
 </a>
 
 <a href='/leading-distributed-teams/' class="p-card">
