deploy: a4f2b14dd618e78afb99b5fb11e98a4ecd74ce6f

--- a/index.html
+++ b/index.html
@@ -184,6 +184,17 @@
   <h4 class="p-card__title">Handling “class” attribute in Beautifulsoup</h4>
 </a>
 
+<a href='/fostering-a-culture-of-gratitude/' class="p-card">
+  
+  
+  <span class="p-badge--management">management</span>
+  
+  
+  
+  
+  <h4 class="p-card__title">Fostering a culture of gratitude</h4>
+</a>
+
 <a href='/ant-fm/' class="p-card">
   
   
